@@ -1,115 +1,86 @@
 package com.example.exergen.business.service;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.*;
+import static org.mockito.Mockito.*;
 
 import com.example.exergen.model.EquipmentType;
-import com.example.exergen.model.Exercise;
 import com.example.exergen.model.MuscleGroup;
+import com.example.exergen.model.Exercise;
 
 import org.junit.Before;
 import org.junit.Test;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class WorkoutGenerationConstraintsTest {
 
-    private IEnumMapper enumMapper;
+    private IEnumMapper mockMapper;
 
     @Before
     public void setUp() {
-        enumMapper = new EnumMapper();
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testConstructorRejectsNullEnumMapper() {
-        new WorkoutGenerationConstraints(null, List.of("Dumbbell"), List.of("Chest"), 20);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testConstructorRejectsNullSelectedEquipment() {
-        new WorkoutGenerationConstraints(enumMapper, null, List.of("Chest"), 20);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testConstructorRejectsNullTargetMuscles() {
-        new WorkoutGenerationConstraints(enumMapper, List.of("Dumbbell"), null, 20);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testConstructorRejectsEmptyTargetMuscles() {
-        new WorkoutGenerationConstraints(enumMapper, List.of("Dumbbell"), List.of(), 20);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testConstructorRejectsNonPositiveExerciseCount() {
-        new WorkoutGenerationConstraints(enumMapper, List.of("Dumbbell"), List.of("Chest"), 0);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testConstructorRejectsBlankConstraintValues() {
-        new WorkoutGenerationConstraints(enumMapper, List.of(" "), List.of("Chest"), 20);
+        mockMapper = mock(IEnumMapper.class);
+        when(mockMapper.toEquipmentEnums(anyList())).thenReturn(Collections.singletonList(EquipmentType.DUMBBELLS));
+        when(mockMapper.toMuscleEnums(anyList())).thenReturn(Collections.singletonList(MuscleGroup.CHEST));
     }
 
     @Test
-    public void testConstructorTrimsValuesAndStoresExerciseCount() {
-        WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(
-                enumMapper, List.of(" Dumbbell "), List.of(" Chest "), 25);
-
-        assertEquals(List.of(EquipmentType.DUMBBELLS), constraints.getSelectedEquipment());
-        assertEquals(List.of(MuscleGroup.CHEST), constraints.getTargetMuscleGroups());
-        assertEquals(25, constraints.getTargetExerciseCount());
+    public void testCreateCountBased_ValidInput_Success() {
+        WorkoutGenerationConstraints constraints = WorkoutGenerationConstraints.createCountBased(
+                mockMapper, Arrays.asList("Dumbbells"), Arrays.asList("Chest"), 5, 30, 15);
+        
+        assertEquals(5, constraints.getTargetExerciseCount());
+        assertEquals(30, constraints.getWorkSeconds());
+        assertEquals(15, constraints.getRestSeconds());
+        assertFalse(constraints.isTimeBased());
     }
 
     @Test
-    public void testMatchesExerciseReturnsTrueWhenEquipmentAndMuscleMatch() {
-        WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(
-                enumMapper, List.of("Dumbbells"), List.of("Chest"), 20);
+    public void testCreateTimeBased_ValidInput_Success() {
+        WorkoutGenerationConstraints constraints = WorkoutGenerationConstraints.createTimeBased(
+                mockMapper, Arrays.asList("Dumbbells"), Arrays.asList("Chest"), 600, 30, 15);
+        
+        assertEquals(600, constraints.getTargetDurationSeconds());
+        assertTrue(constraints.isTimeBased());
+    }
 
-        Exercise exercise = new Exercise(
-                "ex-1",
-                "Dumbbell Press",
-                List.of(MuscleGroup.CHEST),
-                List.of(EquipmentType.DUMBBELLS),
-                "Press dumbbells",
-                3,
-                List.of("img"));
+    @Test(expected = IllegalArgumentException.class)
+    public void testConstructor_InvalidExerciseCount_ThrowsException() {
+        WorkoutGenerationConstraints.createCountBased(
+                mockMapper, Arrays.asList("Dumbbells"), Arrays.asList("Chest"), 0, 30, 15);
+    }
 
-        assertTrue(constraints.matchesExercise(exercise));
+    @Test(expected = IllegalArgumentException.class)
+    public void testConstructor_InvalidDuration_ThrowsException() {
+        WorkoutGenerationConstraints.createTimeBased(
+                mockMapper, Arrays.asList("Dumbbells"), Arrays.asList("Chest"), 0, 30, 15);
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void testConstructor_InvalidWorkSeconds_ThrowsException() {
+        WorkoutGenerationConstraints.createCountBased(
+                mockMapper, Arrays.asList("Dumbbells"), Arrays.asList("Chest"), 5, 0, 15);
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void testConstructor_InvalidRestSeconds_ThrowsException() {
+        WorkoutGenerationConstraints.createCountBased(
+                mockMapper, Arrays.asList("Dumbbells"), Arrays.asList("Chest"), 5, 30, -1);
     }
 
     @Test
-    public void testMatchesExerciseReturnsFalseWhenMuscleDoesNotMatch() {
-        WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(
-                enumMapper, List.of("Dumbbell"), List.of("Legs"), 20);
-
-        Exercise exercise = new Exercise(
-                "ex-1",
-                "Dumbbell Press",
-                List.of(MuscleGroup.CHEST),
-                List.of(EquipmentType.DUMBBELLS),
-                "Press dumbbells",
-                3,
-                List.of("img"));
-
+    public void testMatchesExercise_CallsMatcher() {
+        WorkoutGenerationConstraints constraints = WorkoutGenerationConstraints.createCountBased(
+                mockMapper, Arrays.asList("Dumbbells"), Arrays.asList("Chest"), 5, 30, 15);
+        
+        Exercise exercise = new Exercise("1", "Pushup", 
+                Collections.singletonList(MuscleGroup.CHEST), 
+                Collections.singletonList(EquipmentType.BODYWEIGHT), 
+                "Desc", 2, Collections.singletonList("img"));
+        
+        // Pushup uses bodyweight, but we selected dumbbells in setUp mapper stub.
+        // matchesExercise should return false because of equipment mismatch.
         assertFalse(constraints.matchesExercise(exercise));
-    }
-
-    @Test
-    public void testMatchesExerciseAllowsAnyEquipmentWhenNoEquipmentSelected() {
-        WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(
-                enumMapper, List.of(), List.of("Chest"), 20);
-
-        Exercise exercise = new Exercise(
-                "ex-1",
-                "Bodyweight Pushup",
-                List.of(MuscleGroup.CHEST),
-                List.of(EquipmentType.BODYWEIGHT),
-                "Pushup",
-                2,
-                List.of("img"));
-
-        assertTrue(constraints.matchesExercise(exercise));
     }
 }
